--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,11 +1,13 @@
+version: "3.8"
+
 services:
   app:
-    image: 'jc21/nginx-proxy-manager:latest'
+    image: jc21/nginx-proxy-manager:latest
     container_name: nginx-proxy-manager
     ports:
-      - '80:80'
-      - '443:443'
-      - '81:81'
+      - "80:80"
+      - "443:443"
+      - "81:81"
     environment:
       - PUID=${PUID}
       - PGID=${PGID}
@@ -14,3 +16,10 @@ services:
       - /mnt/data/docker/volumes/nginx-proxy-manager/data:/data
       - /mnt/data/docker/volumes/nginx-proxy-manager/letsencrypt:/etc/letsencrypt
     restart: unless-stopped
+    networks:
+      - proxy
+      - default
+
+networks:
+  proxy:
+    external: true
