--- a/.github/workflows/docker-compose-validation.yml
+++ b/.github/workflows/docker-compose-validation.yml
@@ -1,4 +1,4 @@
-name: Validate and Auto-Merge PR
+name: Validate PR
 
 on:
   pull_request:
@@ -27,16 +27,4 @@ jobs:
     - name: Validate Docker Compose file
       run: |
         docker compose -f docker-compose.yml config
-
-    - name: Auto-merge PR if validation passes
-      run: |
-        gh pr merge --auto --squash "$PR_URL"
-      env:
-        GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
-        PR_URL: ${{ github.event.pull_request.html_url }}
-
-    - name: Delete the branch after merge
-      run: |
-        gh api -X DELETE "repos/${{ github.repository }}/git/refs/heads/${{ github.event.pull_request.head.ref }}"
-      env:
-        GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+        
